--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@ class="navbar navbar-expand-lg position-absolute top-0 z-index-3 w-100 shadow-no
   <!-- -------- START FOOTER 5 w/ DARK BACKGROUND ------- -->
 <div class="position-relative mt-8">
   <div class="container">
-    <div class="card z-index-3 bg-cover" style="background-image: url(../../assets/img/purple-thin.JPEG);">
+    <div class="card z-index-3 bg-cover" style="background-image: url(assets/img/purple-thin.JPEG);">
       <div class="card-body">
         <div class="row">
           <div class="col-md-8 mx-auto text-center my-auto">
