--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ class="navbar navbar-expand-lg position-absolute top-0 z-index-3 w-100 shadow-no
 </nav>
 <!-- End Navbar -->
 <!-- End Navbar -->
-    <div class="page-header min-vh-100" style="background-image: url(../../assets/img/bg11.jpeg);" loading="lazy">
+    <div class="page-header min-vh-100" style="background-image: url(assets/img/bg11.jpeg);" loading="lazy">
       <span class="mask bg-gradient-dark opacity-4"></span>
       <div class="container">
         <div class="row justify-content-center">
