--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@ class="navbar navbar-expand-lg position-absolute top-0 z-index-3 w-100 shadow-no
     <script src="/assets/js/core/bootstrap.min.js"></script>
 
     <!-- Theme JS -->
-    <script src="./assets/js/material-kit-pro.min.js" type="text/javascript"></script>
+    <script src="/assets/js/material-kit-pro.min.js" type="text/javascript"></script>
 
 </body>
 
