--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <nav
 class="navbar navbar-expand-lg position-absolute top-0 z-index-3 w-100 shadow-none my-3 navbar-transparent">
 <div class="container">
-  <a class="navbar-brand" href="/index.html" rel="tooltip" title="ATP Logo" data-placement="bottom">
+  <a class="navbar-brand" href="/" rel="tooltip" title="ATP Logo" data-placement="bottom">
     <img class="d-none d-md-block" src="https://i.postimg.cc/65f5CQHC/ATP-TEXT-2.png" width="150" >
     <img class="d-block d-md-none" src="https://i.postimg.cc/65f5CQHC/ATP-TEXT-2.png" width="70" >
   </a>
